--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-svg": "13.4.0",
     "remove": "^0.1.5",
     "styled-components": "^6.0.0-rc.6"
   },
