--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "phosphor-react-native": "^1.1.2",
